chore: 移除后端评论清洗逻辑，仅保留长度校验与验证码